[REFACTPR] sonar